--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Technos Web | TD Intégration</title>
 
     <link rel="stylesheet" href="style.css"/>
+    <!-- Paul was here -->
 
   </head>
   <body>
