--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="left-side">
           // juste pour démontrer un commmit
-          // test
+          // test 2
         </div>
 
         <div class="right-side">
