--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     
     <header>
-      
+    <img src="mat_le_dat.gif" alt="SL">  
     </header>
 
     <div class="header-background"></div>
