--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Technos Web | TD Intégration</title>
 
     <link rel="stylesheet" href="style.css"/>
+    <img src="mat_le_dat.gif" alt="SL"> 
+    <img src="mat_le_dat.gif" alt="SL"> 
+    <img src="mat_le_dat.gif" alt="SL"> 
+    <img src="mat_le_dat.gif" alt="SL"> 
+    <img src="mat_le_dat.gif" alt="SL"> 
+    <img src="mat_le_dat.gif" alt="SL"> 
 
     <img src="assets/img/header-background.jpg" alt="testEncoreEtEncore">
     
