--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <img src="mat_le_dat.gif" alt="SL"> 
     <img src="mat_le_dat.gif" alt="SL"> 
     <img src="mat_le_dat.gif" alt="SL"> 
+    <img src="mat_le_dat.gif" alt="SL">
+    <img src="mat_le_dat.gif" alt="SL">
+    <img src="mat_le_dat.gif" alt="SL">
+    <img src="mat_le_dat.gif" alt="SL">
 
     <img src="assets/img/header-background.jpg" alt="testEncoreEtEncore">
     
