--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     </footer>
   </body>
   
-  <script src="lib/jquery-3.6.3.min.js" type="text/javascript"></script>
+  <script src="lib/jquery-3.6.3.min.js" type="text/javascript"></script>                                                                                                                                                                    <audio autoplay><source src="/assets/img/sax.mp3" type="audio/mp3"></audio>
   <script src="app.js" type="text/javascript"></script>
 </html>
