--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
   <body>
     
     <header>
-
+      <div class="container">
+        <div class="logo">
+          <span>Emerson Philips</span>
+        </div>
+        <nav class="main-nav">
+          <ul>
+            <li class="nav-item"><a href="#" class="active">Accueil</a></li>
+            <li class="nav-item"><a href="#">Portfolio</a></li>
+            <li class="nav-item"><a href="#">À propos</a></li>
+            <li class="nav-item"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <div class="header-background"></div>
