--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     <div class="header-background"></div>
 
     <div class="profil">
+
+      <img src="assets/img/image_profil.jpg" alt="Emerson Philips" />
+
+      <div class="profil-infos">
+        <h1 class="name">Emerson Philips</h1>
+        <div class="social-contact">@emerson</div>
+      </div>
+
+      <div class="profil-actions">
+        <button href="#" class="btn btn-outline">Portfolio</button>
+        <button href="#" class="btn btn-primary">
+          <span class="material-symbols-outlined">
+            download
+          </span>
+          Curriculum Vitae
+        </button>
+      </div>
       
     </div>
 
