--- a/index.html
+++ b/index.html
@@ -53,11 +53,106 @@
     <div class="container">
       <div class="main-container">
         <main>
+          <div class="content">
+            <h2>Expérience</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, neque harum! Tempore, quia. Officiis autem deleniti facilis veritatis fugiat vel, ratione hic rem inventore debitis quibusdam. Culpa sed libero natus.</p>
+            <p></p>
+          </div>
+          <div class="content">
+            <h2>À propos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, neque harum! Tempore, quia. Officiis autem deleniti facilis veritatis fugiat vel, ratione hic rem inventore debitis quibusdam. Culpa sed libero natus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, neque harum! Tempore, quia. Officiis autem deleniti facilis veritatis fugiat vel, ratione hic rem inventore debitis quibusdam. Culpa sed libero natus.</p>
+            <a href="#" class="intern-link">
+              Lire la suite
+              <span class="material-symbols-outlined">
+                arrow_right_alt
+              </span>
+            </a>
+          </div>
 
-          
+          <div class="experiences">
+
+            <article class="card">
+              <div class="xp-header">
+                <div class="xp-logo-container orange">
+                  <img src="assets/img/logo_orange.png" class="xp-logo" />
+                </div>
+                <div class="xp-header-details">
+                  <h2>Data Scientist</h2>
+                  <p>Orange</p>
+                </div>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="xp-header">
+                <div class="xp-logo-container blue">
+                  <img src="assets/img/logo_nasa.png" class="xp-logo" />
+                </div>
+
+                <div class="xp-header-details">
+                  <h2>Data Scientist</h2>
+                  <p>NASA</p>
+                </div>
+              </div>
+            </article>
+
+          </div>
         </main>
 
         <aside>
+
+          <div class="aside-content">
+            <h3>Formations</h3>
+
+            <div class="formation">
+              <h4><span>2022 - 2023</span> Lorem ipsum dolor sit amet</h4>
+              <p>Lorem ipsum dolor sit amet consectetur. Ut tincidunt eget egestas pretium quis in posuere.</p>
+            </div>
+
+            <div class="formation">
+              <h4><span>2022 - 2023</span> Lorem ipsum dolor sit amet</h4>
+              <p>Lorem ipsum dolor sit amet consectetur. Ut tincidunt eget egestas pretium quis in posuere.</p>
+            </div>
+
+            <div class="formation">
+              <h4><span>2022 - 2023</span> Lorem ipsum dolor sit amet</h4>
+              <p>Lorem ipsum dolor sit amet consectetur. Ut tincidunt eget egestas pretium quis in posuere.</p>
+            </div>
+          </div>
+
+          <div class="aside-content grades">
+            <h3>Anglais</h3>
+            <div class="grade-items">
+              <span class="material-symbols-outlined icon-filled">grade</span>
+              <span class="material-symbols-outlined icon-filled">grade</span>
+              <span class="material-symbols-outlined icon-filled">grade</span>
+              <span class="material-symbols-outlined icon-filled">grade</span>
+              <span class="material-symbols-outlined">grade</span>
+            </div>
+          </div>
+
+          <div class="aside-content grades">
+            <h3>Allemand</h3>
+            <div class="grade-items">
+              <span class="material-symbols-outlined icon-filled">grade</span>
+              <span class="material-symbols-outlined icon-filled">grade</span>
+              <span class="material-symbols-outlined icon-filled">grade</span>
+              <span class="material-symbols-outlined">grade</span>
+              <span class="material-symbols-outlined">grade</span>
+            </div>
+          </div>
+
+          <div class="aside-content grades">
+            <h3>Notez-moi !</h3>
+            <div class="grade-items js-grades">
+              <span class="material-symbols-outlined">grade</span>
+              <span class="material-symbols-outlined">grade</span>
+              <span class="material-symbols-outlined">grade</span>
+              <span class="material-symbols-outlined">grade</span>
+              <span class="material-symbols-outlined">grade</span>
+            </div>
+          </div>
 
         </aside>
 
